Changelog
=========

0.9-dev - (unreleased)
----------------------

0.8 - (2011-02-09)
------------------
 * Bug fix: skip fields for which the accessor cannot be determined [tiberich #3982]

0.7 - (2010-12-16)
------------------
- set surf logging level to CRITICAL to avoid all INFO messages #3951 [vincisas]

0.6 - (2010-11-10)
------------------
- typo fix for tests [vincisas]

0.5 - (2010-09-30)
------------------
- dcterms:hasPart added to folderish content #3519 [vincisas]
- dcterms:isPartOf added to contained content #3519 [vincisas]

0.4 (2010-09-06)
----------------
- use accessor to get the value of fields [tiberich #3550]
- 'file' added to blacklist as a temporary fix for encode error [ghicaale]
- under marshaller.py added temporary fix for: 'tuple' object has no attribute 'replace' [ghicaale]
- Silent failure with schema or rdf generation, errors are logged #3564 [vincisas]
- Schemageneration contains extended fields too #3577 [vincisas]

0.3 (2010-08-03)
----------------
- blacklist is configurable through ZMI in properties_tool/rdfmarshaller_properties [vincisas]
- lowercased dc elements [vincisas]
- rdf schema generation from portal type FTIs added [vincisas]
- rdf export done with autogenerated schemas and portal type specific namespaces [vincisas]
- folderish export added [vincisas]
- ATVocabularyManager vocabularies exported as RDF [vincisas]

0.2 (2010-06-15)
----------------
- Cleanup and more generic export moved here from eea.soer [vincisas]
- Blacklist added [vincisas]

0.1 (2010-05-19)
----------------
- Initial release
