@@ -2,8 +2,8 @@
 
 from Products.Marshall.registry import registerComponent
 from eea.rdfmarshaller import marshaller
-import eea.rdfmarshaller.config
-
+from  eea.rdfmarshaller import config
+config
 registerComponent('surfrdf', 'RDF Marshaller',
                   marshaller.RDFMarshaller)
 
