@@ -11,7 +11,7 @@ class RDFExport(object):
     def __call__(self):
         marshaller = getComponent('surfrdf')
         endLevel = int(self.request.get('endLevel',1))
-        content_type, length, data = marshaller.marshall(self.context, endLevel=endLevel)
+        _content_type, _length, data = marshaller.marshall(self.context, endLevel=endLevel)
         self.request.response.setHeader('Content-Type','application/rdf+xml; charset=utf-8')
         return data
 
@@ -24,6 +24,6 @@ class RDFSExport(object):
 
     def __call__(self):
         marshaller = getComponent('surfrdfs')
-        content_type, length, data = marshaller.marshall(self.context)
+        _content_type, _length, data = marshaller.marshall(self.context)
         self.request.response.setHeader('Content-Type','application/rdf+xml; charset=utf-8')
         return data
